<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bt_landmark"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_title_Landmarks" />

    <Button
        android:id="@+id/bt_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_title_Restaurants"
        android:width="250dp" />

    <Button
        android:id="@+id/bt_entertaimain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_title_Emtertaiments"
        android:width="250dp" />

    <Button
        android:id="@+id/bt_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_title_Help"
        android:width="250dp" />

    <Button
        android:id="@+id/bt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_title_Exit"
        android:width="250dp" />

</LinearLayout>